# nse_net_n3

./: .gitignore  CMakeLists.txt  README.md
data/: mass.txt  stable_isotopes.csv
scripts/: plot_nse.py
src/: input.cpp  input.hpp  main.cpp  main.hpp  nse_solver.cpp  nse_solver.hpp  output.cpp  output.hpp
